# kerminal

./: .gitignore  AGENTS.md  README.md  TRADEMARKS.md  eslint.config.mjs  index.html  knip.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  windows-common-controls-v6.manifest
src-tauri/build_support/: command_spec_registry.rs  snippet_catalog.rs
src-tauri/build_support/command_spec_registry/: emission.rs  schema.rs  validation.rs
src-tauri/build_support/snippet_catalog/: emission.rs  schema.rs  validation.rs
src-tauri/capabilities/: default.json  sftp-workspace-launcher.json  sftp-workspace.json
src-tauri/examples/: export_tool_registry_contract.rs
src-tauri/icons/: icon.icns
src-tauri/src/: app_menu.rs  app_tray.rs  desktop_plugins.rs  error.rs  lib.rs  main.rs  paths.rs  state.rs  window_frame.rs  window_management.rs
src-tauri/src/commands/: agent_session.rs  ai.rs  ai_conversation.rs  command_history.rs  command_suggestion.rs  connection.rs  diagnostics.rs  docker.rs  external_agent_workspace.rs  external_launch.rs  file_dialog.rs  llm_provider.rs  local_files.rs  mcp_http_server.rs  mod.rs  port_forward.rs  profile.rs  registry.rs  remote_host.rs  serial.rs  server_info.rs  settings.rs  sftp.rs  snippet.rs  ssh.rs  ssh_auth.rs  ssh_command.rs  telnet.rs  terminal.rs  terminal_session_binding.rs  tmux.rs  tool_registry.rs  workflow.rs  workspace_session.rs  workspace_sync.rs
src-tauri/src/models/: agent_context.rs  agent_session.rs  ai_agent.rs  ai_agent_run.rs  ai_context.rs  ai_conversation.rs  ai_tool_invocation.rs  command_history.rs  command_suggestion.rs  config_change.rs  connection.rs  diagnostics.rs  docker.rs  file_preview.rs  llm_provider.rs  mcp_server.rs  mod.rs  port_forward.rs  profile.rs  remote_host.rs  server_info.rs  settings.rs  sftp.rs  snippet.rs  ssh_command.rs  target.rs  terminal.rs  tmux.rs  tool_registry.rs  workflow.rs
src-tauri/src/security/: mod.rs  redaction.rs
src-tauri/src/services/: agent_context_service.rs  agent_session_file_store.rs  agent_session_service.rs  agent_target_hydration_service.rs  ai_agent_context.rs  ai_agent_harness_rig_model.rs  ai_agent_run_service.rs  ai_agent_service.rs  ai_context_service.rs  ai_conversation_service.rs  ai_tool_invocation_service.rs  application_runtime.rs  command_history_service.rs  command_suggestion_service.rs  compatibility_registry.rs  config_change_observer_service.rs  credential_service.rs  diagnostics_service.rs  docker_host_service.rs  encrypted_vault_service.rs  external_agent_workspace.rs  local_file_service.rs  local_network_proxy_service.rs  mcp_discovery_service.rs  mcp_streamable_http_server.rs  mcp_tool_catalog_service.rs  mcp_tool_executor_service.rs  mcp_tool_gateway.rs  mod.rs  port_forward_service.rs  port_forward_service_tests.rs  process_command.rs  profile_service.rs  pty_process_guard.rs  remote_host_service.rs  rig_provider_service.rs  serial_terminal_service.rs  server_info_service.rs  settings_service.rs  sftp_service.rs  (+22 more)
src-tauri/src/state/: agent_capabilities.rs  configuration_capabilities.rs  file_capabilities.rs  mcp_capabilities.rs  operational_capabilities.rs  remote_capabilities.rs  startup_recovery.rs  terminal_capabilities.rs
src-tauri/src/storage/: ai_context_snapshots.rs  ai_conversations.rs  ai_tool_audits.rs  ai_tool_pending.rs  atomic_file.rs  audit_log_store.rs  command_history.rs  command_migrations.rs  command_sqlite.rs  command_suggestion_audit.rs  command_suggestion_cache.rs  command_suggestion_cleanup.rs  command_suggestion_feedback.rs  command_suggestion_telemetry.rs  config_file_store.rs  durable_file_transaction.rs  file_lock.rs  file_store.rs  llm_providers.rs  local_file_operations.rs  migrations.rs  migrations_ai_conversations.rs  mod.rs  port_forwards.rs  profiles.rs  remote_hosts.rs  runtime_store.rs  settings.rs  snippet_preferences.rs  snippets.rs  sqlite.rs  storage_manifest.rs  workflows.rs
src-tauri/tests/: agent_context_service.rs  agent_session_command.rs  agent_session_service.rs  agent_target_hydration_service.rs  ai_agent_context_gateway.rs  ai_agent_history_prompt.rs  ai_agent_live_provider_smoke.rs  ai_agent_run_final_guard.rs  ai_agent_run_service.rs  ai_agent_service.rs  ai_agent_vision_adapter.rs  ai_context_service.rs  ai_conversation_history_search.rs  ai_conversation_service.rs  ai_tool_invocation_service.rs  app_menu.rs  app_state_composition.rs  app_tray.rs  application_runtime_lifecycle.rs  audit_log_store.rs  command_history_service.rs  command_spec_registry.rs  command_suggestion_performance.rs  command_suggestion_service.rs  command_suggestion_ssh_smoke.rs  compatibility_registry.rs  config_change_observer_service.rs  config_file_store.rs  connection.rs  diagnostics_service.rs  docker_host_service.rs  external_agent_workspace.rs  external_agent_workspace_session.rs  external_launch_alias.rs  external_launch_bridge.rs  external_launch_commands.rs  external_launch_deep_link.rs  external_launch_fixtures.rs  external_launch_host_identity.rs  external_launch_host_identity_hitl.rs  (+83 more)
src-tauri/tests/ai_tool_invocation_service/: container_read_protocol.rs  diagnostics_client.rs  execute_if_allowed.rs  local_management_gateway.rs  local_resources.rs  pending_recovery.rs  port_forward_protocol.rs  prepare_policy.rs  registry_contract.rs  remote_host_facade.rs  settings_terminal_audit.rs  (+5 more)
(+2335 files in other folders)
