[package]
name = "kerminal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kerminal_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror = "2.0.18"
portable-pty = "0.9.0"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
which = "8.0.4"
rig-core = { version = "0.38.2", features = ["rmcp"] }
rmcp = { version = "1.7.0", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
keyring = "4.1.1"
url = "2.5.7"
regex = "1.12.4"
sha2 = "0.10"
sysinfo = "0.39.3"
http = "1"
axum = "0.8"
tokio-util = "0.7"
tauri-plugin-dialog = "2"
rfd = "0.16.0"
async-trait = "0.1"
futures = "0.3"
russh = "0.61.2"
russh-sftp = { package = "bssh-russh-sftp", version = "2.3.0" }
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
zip = { version = "6.0.0", default-features = false, features = ["deflate-flate2"] }
tar = "0.4"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.4.1", features = ["std"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"

[dev-dependencies]
rand = { version = "0.10", features = ["thread_rng"] }
tempfile = "3.27.0"
