[package]
name = "kerminal"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kerminal_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror = "2.0.18"
toml = "0.9"
portable-pty = "0.9.0"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
which = "8.0.4"
rmcp = { version = "1.7.0", features = ["transport-streamable-http-server", "transport-streamable-http-server-session"] }
keyring = "4.1.1"
url = "2.5.7"
regex = "1.12.4"
sha2 = "0.10"
hmac = "0.12"
sysinfo = "0.39.3"
http = "1"
axum = "0.8"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.11.0-rc.3" }
getrandom = "0.3.4"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
time = { version = "0.3", features = ["formatting"] }
tokio-util = "0.7"
tauri-plugin-dialog = "2"
rfd = { version = "0.16.0", default-features = false }
async-trait = "0.1"
futures = "0.3"
russh = { version = "0.61.2", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = { package = "bssh-russh-sftp", version = "2.3.0" }
serialport = "4"
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
zip = { version = "6.0.0", default-features = false, features = ["deflate-flate2"] }
tar = "0.4"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.4.1", features = ["std"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_JobObjects", "Win32_System_Threading"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-window-state = "2"

[dev-dependencies]
rand = { version = "0.10", features = ["thread_rng"] }
rmcp = { version = "1.7.0", features = ["client", "transport-streamable-http-client-reqwest"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std"] }
tauri = { version = "2", features = ["test"] }
tempfile = "3.27.0"
