[package]
name = "command-spec-registry-harness"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.9"
tempfile = "3.27.0"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.9"

[[test]]
name = "command_spec_registry"
path = "../../../command_spec_registry.rs"
